# palmy

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  genanchor.js  main.cpp
include/palmy/: anchor.hpp  common.hpp  detector.hpp  handmarker.hpp
src/: anchor.cpp  handmarker.cpp  palmdetector.cpp
